# GM2

./: .gitignore  CMakeLists.txt  GM3.sln  README.md  READMEold.md  形状処理_v2.sln
GM3/: Axis.cpp  Axis.h  Background.h  BezierCurve.cpp  BezierCurve.h  BezierSurface.cpp  BezierSurface.h  Box.h  BsplineCurve.cpp  BsplineCurve.h  BsplineSurface.cpp  BsplineSurface.h  CalcGeoModelUtil.h  CalcUtil.cpp  CalcUtil.h  Callback.h  Camera.cpp  Camera.h  Color.cpp  Color.h  ControlPoint.h  Curve.cpp  Curve.h  Display.cpp  DrawUtil.cpp  DrawUtil.h  EPS.cpp  EPS.h  Edge.h  Error.h  GM3.vcxproj  GM3.vcxproj.filters  GV.h  GeoGrid.h  Initialize.cpp  Initialize.h  Intersection.cpp  Intersection.h  Keyboard.cpp  Light.h  (+39 more)
GM3/KJS_FILE/: CGS_bspline_curve_1.kjs  CGS_bspline_curve_2.kjs  CGS_bspline_curve_9_1.kjs  CGS_bspline_curve_9_2.kjs  CGS_bspline_curve_9_3.kjs  CGS_bspline_curve_9_4.kjs  CGS_bspline_curve_G.kjs  CGS_bspline_curve_S.kjs  CGS_bspline_surface_2.kjs
KJS_FILE/: CGS_bspline_curve_G.kjs  CGS_bspline_surface_1.kjs
UnitTestCalc/: UnitTestCalc.vcxproj  UnitTestCalc.vcxproj.filters
src/: Axis.cpp  Axis.h  Background.h  BezierCurve.cpp  BezierCurve.h  BezierSurface.cpp  BezierSurface.h  Box.h  BsplineCurve.cpp  BsplineCurve.h  BsplineSurface.cpp  BsplineSurface.h  CMakeLists.txt  CalcGeoModelUtil.h  CalcUtil.cpp  CalcUtil.h  Callback.h  Camera.cpp  Camera.h  Color.cpp  Color.h  ControlPoint.h  Curve.cpp  Curve.h  Display.cpp  DrawUtil.cpp  DrawUtil.h  EPS.cpp  EPS.h  Error.h  GV.h  GeoGrid.h  Initialize.cpp  Initialize.h  Intersection.cpp  Intersection.h  Keyboard.cpp  Light.h  Main.cpp  Matrix.h  (+33 more)
src/KJS_FILE/: CGS_bezier_curve_B.kjs  CGS_bezier_surface_A.kjs  CGS_bezier_surface_D.kjs
形状処理_v2/: Axis.cpp  Axis.h  Background.h  BezierCurve.cpp  BezierCurve.h  BezierSurface.cpp  BezierSurface.h  Box.h  BsplineCurve.cpp  BsplineCurve.h  BsplineSurface.cpp  BsplineSurface.h  CMakeLists.txt  CalcGeoModelUtil.h  CalcUtil.cpp  CalcUtil.h  Callback.h  Camera.h  Color.cpp  Color.h  ControlPoint.h  Curve.cpp  Curve.h  Display.cpp  DrawUtil.cpp  DrawUtil.h  EPS.cpp  EPS.h  Error.h  GV.h  GeoGrid.h  Initialize.cpp  Initialize.h  Keyboard.cpp  Light.h  LookAt.h  Main.cpp  Matrix.h  Matrix3d.h  Model.h  (+35 more)
形状処理_v2/KJS_FILE/: CGS_bspline_curve_C.kjs  KJSフォーマット.txt
